# ornaguide-rs

./: Cargo.toml  LICENSE  README.md  justfile
api/: Cargo.toml
api/proc_macros/: Cargo.toml
api/proc_macros/src/: api_filter.rs  lib.rs
api/src/: assessat.rs  cors.rs  data.rs  deref.rs  error.rs  filter.rs  items.rs  main.rs  misc.rs  monsters.rs  options.rs  pets.rs  rocket_utils.rs  sirscor.rs  skills.rs
api/src/data/: translations.rs
api/src/filter/: compilable.rs
ethi/: Cargo.toml
ethi/src/: backups.rs  cli.rs  codex.rs  codex_bugs.rs  config.rs  ethiraric.rs  guide_html.rs  guide_match.rs  main.rs  merge.rs  misc.rs  output.rs  ratakor.rs  sirscor.rs  thecraigger.rs  translation.rs
ethi/src/backups/: changes.rs  data_merger.rs  io.rs  output.rs
ethi/src/codex/: fetch.rs
ethi/src/ethiraric/: summons.rs
ethi/src/guide/: fetch.rs
ethi/src/guide_match/: checker.rs  items.rs  misc.rs  monsters.rs  pets.rs  skills.rs  status_effects.rs
examples/: autofix.rs  parse.rs  read_all_jsons.rs
examples/ethi/: guide_match.rs  main.rs  misc.rs  output.rs
ornaguide-rs/: Cargo.toml
ornaguide-rs/examples/autofix/: fixes.rs  main.rs
ornaguide-rs/src/: codex.rs  config.rs  data.rs  error.rs  guide.rs  lib.rs  misc.rs  monsters.rs  skills.rs  utils.rs
ornaguide-rs/src/codex/: affix.rs  fetch.rs  follower.rs  html_follower_parser.rs  html_item_parser.rs  html_list_parser.rs  html_monster_parser.rs  html_skill_parser.rs  item.rs  monster.rs  skill.rs  translation.rs
ornaguide-rs/src/data/: codex_data.rs  codex_generic_monster.rs  guide_data.rs
ornaguide-rs/src/guide/: cache.rs  fetch.rs  html_form_parser.rs  html_list_parser.rs  html_utils.rs  http.rs  ornaguide.rs  post_error_parser.rs  static.rs
ornaguide-rs/src/items/: admin.rs  item.rs
ornaguide-rs/src/monsters/: admin.rs  monster.rs
ornaguide-rs/src/pets/: admin.rs
ornaguide-rs/src/skills/: admin.rs  raw.rs  skill.rs
ornaguide-rs/src/utils/: html.rs
src/: codex.rs  error.rs  guide.rs  items.rs  lib.rs  misc.rs  monsters.rs  pets.rs  raw_items.rs
src/codex/: fetch.rs  follower.rs  html_item_parser.rs  html_list_parser.rs  html_monster_parser.rs  html_skill_parser.rs  item.rs  monster.rs  skill.rs
src/guide/: cache.rs  html_form_parser.rs  html_list_parser.rs  html_parser.rs  html_utils.rs  http.rs  (+2 more)
(+16 files in other folders)
