[package]
name = "ethi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = "0.4.3"
chrono = "0.4.19"
csv = "1.1.6"
dotenv = "0.15.0"
indicatif = "0.16.2"
itertools = "0.10.3"
lazy_static = "1.4.0"
nix = "0.25.0"
ornaguide-rs = { path = "../ornaguide-rs" }
serde_json = "1.0.59"
serde = { version = "1.0.133", features = ["derive"] }
tar = "0.4.38"
