[package]
name = "ornaguide-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
itertools = "0.10.3"
kuchiki = "0.8.1"
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"

[dev-dependencies]
dotenv = "0.15.0"
