[package]
name = "ornaguide-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
dotenv = "0.15.0"
futures = "0.3.25"
itertools = "0.10.3"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "1", features = ["full"] }
